feat: creating conection with bd and initial route

--- a/backend/appsettings.Development.json
+++ b/backend/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "database": "server=localhost;user=root;password=jvrs;database=DBSKADI"
 }
