feat: feature send email and confirm email

--- a/backend/appsettings.Development.json
+++ b/backend/appsettings.Development.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "database": "server=localhost;user=root;password=jvrs;database=DBSKADI"
+  "database": "server=localhost;user=root;password=jvrs;database=DBSKADI",
+  "EmailSettings": {
+    "PrimaryDomain": "smtp.gmail.com",
+    "PrimaryPort": "587",
+    "UsernameEmail": "hacksefode01@gmail.com",
+    "UsernamePassword": "House008",
+    "FromEmail": "hacksefode01@gmail.com"
+  }
 }
