--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "database": "server=localhost;user=root;password=jvrs;database=DBSKADI",
+  "EmailSettings": {
+    "PrimaryDomain": "smtp.gmail.com",
+    "PrimaryPort": "587",
+    "UsernameEmail": "josecarlosmacoratti@gmail.com",
+    "UsernamePassword": "*********",
+    "FromEmail": "fromEmail",
+    "ToEmail": "macoratti@yahoo.com",
+    "CcEmail": "macoratti@macoratti.net"
+  }
 }
