feat: craate flutter application and auth auth

--- a/backend/appsettings.Development.json
+++ b/backend/appsettings.Development.json
@@ -5,12 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "database": "server=localhost:3306;user=root;password=jvrs;database=DBSKADI",
+  "database": "server=localhost;user=root;password=jvrs;database=DBSKADI",
   "EmailSettings": {
-    "PrimaryDomain": "smtp.gmail.com",
+    "PrimaryDomain": "smtp.hostinger.com",
     "PrimaryPort": "587",
-    "UsernameEmail": "hacksefode01@gmail.com",
-    "UsernamePassword": "House008",
-    "FromEmail": "hacksefode01@gmail.com"
+    "UsernameEmail": "sistema@souzainnovation.com.br",
+    "UsernamePassword": "#p1ng@S1",
+    "FromEmail": "sistema@souzainnovation.com.br"
   }
 }
