--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -10,6 +10,15 @@ services:
       - "3306:3306"
     networks:
       - mysql-compose-network
+  skadi-backend:
+    image: skadi-backend:1.0
+    ports:
+      - "80:80"
+    depends_on:
+      - mysqlsrv
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+    command: [ "dotnet", "backend.dll" ]
 
   adminer:
     image: adminer
